# learning_ros1_ws

./: build.sh  remove.sh  start_launch.sh  start_publish.sh  start_subscribe.sh
src/learning_communication/: CMakeLists.txt  package.xml
src/learning_communication/msg/: PersonMsg.msg
src/learning_communication/src/: person_publisher.cpp  person_subscriber.cpp  string_publisher.cpp  string_subscriber.cpp
src/learning_debug/: CMakeLists.txt  package.xml
src/learning_debug/src/: publisher.cpp
src/learning_launch/: CMakeLists.txt  package.xml
src/learning_launch/launch/: simple.launch
src/learning_launch/src/: publisher.cpp  subscriber.cpp
